chore: use codemirror for editor

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "@babel/plugin-transform-typescript": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
+    "@types/codemirror": "^5.60.5",
     "@types/formidable": "^2.0.4",
     "@types/node": "=14.18.24",
     "@types/react": "^18.0.12",
@@ -70,6 +71,7 @@
     "@zip.js/zip.js": "^2.4.2",
     "ansi-to-html": "^0.7.2",
     "chokidar": "^3.5.3",
+    "codemirror": "^5.65.9",
     "colors": "^1.4.0",
     "commonmark": "^0.30.0",
     "concurrently": "^6.2.1",
