chore: send structured codegen info to the debug controller

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -716,6 +716,12 @@ DebugController:
     sourceChanged:
       parameters:
         text: string
+        header: string?
+        footer: string?
+        actions:
+          type: array?
+          items: string
+         
 
     # Deprecated
     browsersChanged:
