--- a/.github/workflows/tests_secondary.yml
+++ b/.github/workflows/tests_secondary.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - release-*
+      - roll-into-pw-webkit/1742
   pull_request:
     paths-ignore:
       - 'browser_patches/**'
