feat(connect): support special headers for debug/attachments
`x-playwright-debug-log: value` headers are printed to `pw:browser` debug log.
`x-playwright-attach-string: name=value` headers are attached to each test.

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -540,6 +540,9 @@ LocalUtils:
         socksProxyRedirectPortForTest: number?
       returns:
         pipe: JsonPipe
+        headers:
+          type: array
+          items: NameValue
 
 Root:
   type: interface
