add a new param browserArgs in BrowserContextOptions

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -476,6 +476,9 @@ ContextOptions:
       literals:
       - allow
       - block
+    browserArgs:
+      type: array?
+      items: string
 
 LocalUtils:
   type: interface
