--- a/.github/workflows/tests_primary.yml
+++ b/.github/workflows/tests_primary.yml
@@ -39,7 +39,7 @@ jobs:
             node-version: 18
             browser: chromium
           - os: ubuntu-22.04
-            node-version: 20
+            node-version: 20.5.x
             browser: chromium
     runs-on: ${{ matrix.os }}
     steps:
@@ -113,10 +113,10 @@ jobs:
             node-version: 18
             shard: 2/2
           - os: ubuntu-latest
-            node-version: 20
+            node-version: 20.5.x
             shard: 1/2
           - os: ubuntu-latest
-            node-version: 20
+            node-version: 20.5.x
             shard: 2/2
     runs-on: ${{ matrix.os }}
     steps:
