--- a/.github/workflows/tests_secondary.yml
+++ b/.github/workflows/tests_secondary.yml
@@ -125,7 +125,7 @@ jobs:
         - os: ubuntu-latest
           node_version: 18
         - os: ubuntu-latest
-          node_version: 20
+          node_version: 20.5.x
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v3
