--- a/.github/workflows/tests_secondary.yml
+++ b/.github/workflows/tests_secondary.yml
@@ -137,6 +137,8 @@ jobs:
         DEBUG: pw:install
     - run: npm run build
     - run: npx playwright install-deps
+    - run: npm install -g yarn@1
+    - run: npm install -g pnpm@8
     - run: npm run itest
       if: matrix.os != 'ubuntu-latest'
     - run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run itest
