--- a/packages/playwright-ct-vue2/package.json
+++ b/packages/playwright-ct-vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-vue2",
-  "version": "1.38.0-next",
+  "version": "1.38.0",
   "description": "Playwright Component Testing for Vue2",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "@playwright/experimental-ct-core": "1.38.0-next",
+    "@playwright/experimental-ct-core": "1.38.0",
     "@vitejs/plugin-vue2": "^2.2.0"
   },
   "devDependencies": {
