--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playwright",
-  "version": "1.38.0-next",
+  "version": "1.38.0",
   "description": "A high-level API to automate web browsers",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -51,7 +51,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "playwright-core": "1.38.0-next"
+    "playwright-core": "1.38.0"
   },
   "optionalDependencies": {
     "fsevents": "2.3.2"
