feat: add excludeArgs in launch options

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -392,6 +392,9 @@ LaunchOptions:
     args:
       type: array?
       items: string
+    excludeArgs:
+      type: array?
+      items: string
     ignoreAllDefaultArgs: boolean?
     ignoreDefaultArgs:
       type: array?
