--- a/.github/workflows/publish_canary.yml
+++ b/.github/workflows/publish_canary.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-20.04
     if: github.repository == 'microsoft/playwright'
     permissions:
+      contents: read
       id-token: write
     steps:
     - uses: actions/checkout@v3
