--- a/.github/workflows/tests_components.yml
+++ b/.github/workflows/tests_components.yml
@@ -24,12 +24,18 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [18]
+        include:
+          - os: ubuntu-latest
+            node-version: 16
+          - os: ubuntu-latest
+            node-version: 20
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
     - run: npx playwright install --with-deps
