chore: update repository.url in package.json

--- a/packages/playwright-ct-vue/package.json
+++ b/packages/playwright-ct-vue/package.json
@@ -2,7 +2,10 @@
   "name": "@playwright/experimental-ct-vue",
   "version": "1.39.0-next",
   "description": "Playwright Component Testing for Vue",
-  "repository": "github:Microsoft/playwright",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/playwright.git"
+  },
   "homepage": "https://playwright.dev",
   "engines": {
     "node": ">=16"
