--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -2,7 +2,10 @@
   "name": "playwright",
   "version": "1.39.0-next",
   "description": "A high-level API to automate web browsers",
-  "repository": "github:Microsoft/playwright",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/playwright.git"
+  },
   "homepage": "https://playwright.dev",
   "engines": {
     "node": ">=16"
