--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -4,7 +4,7 @@
   "description": "A high-level API to automate web browsers",
   "repository": {
     "type": "git",
-    "url": "https://github.com/microsoft/playwright.git"
+    "url": "git+https://github.com/microsoft/playwright.git"
   },
   "homepage": "https://playwright.dev",
   "engines": {
@@ -47,7 +47,7 @@
     }
   },
   "bin": {
-    "playwright": "./cli.js"
+    "playwright": "cli.js"
   },
   "author": {
     "name": "Microsoft Corporation"
