--- a/packages/playwright-webkit/package.json
+++ b/packages/playwright-webkit/package.json
@@ -4,7 +4,7 @@
   "description": "A high-level API to automate WebKit",
   "repository": {
     "type": "git",
-    "url": "https://github.com/microsoft/playwright.git"
+    "url": "git+https://github.com/microsoft/playwright.git"
   },
   "homepage": "https://playwright.dev",
   "engines": {
@@ -24,7 +24,7 @@
     "./package.json": "./package.json"
   },
   "bin": {
-    "playwright": "./cli.js"
+    "playwright": "cli.js"
   },
   "scripts": {
     "install": "node install.js"
