update docs and config

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1360,6 +1360,8 @@ Page:
             comparator: string?
             maxDiffPixels: number?
             maxDiffPixelRatio: number?
+            maxDiffSize: number?
+            maxDiffSizeRatio: number?
             threshold: number?
         screenshotOptions:
           type: object?
