fix: only convert input files for browser collocated with server

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1012,6 +1012,7 @@ BrowserContext:
 
   initializer:
     isChromium: boolean
+    isLocalBrowser: boolean
     requestContext: APIRequestContext
     tracing: Tracing
 
