--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@intuned/playwright",
-  "version": "1.36.2-5",
+  "version": "1.36.2-7",
   "description": "A high-level API to automate web browsers",
   "repository": "github:Microsoft/playwright",
   "homepage": "https://playwright.dev",
@@ -28,6 +28,6 @@
     "install": "node install.js"
   },
   "dependencies": {
-    "@intuned/playwright-core": "1.36.2-5"
+    "@intuned/playwright-core": "^1.36.2-6"
   }
 }
