--- a/packages/playwright-ct-svelte/package.json
+++ b/packages/playwright-ct-svelte/package.json
@@ -29,11 +29,15 @@
     }
   },
   "dependencies": {
-    "@playwright/experimental-ct-core": "1.41.0-next",
-    "@sveltejs/vite-plugin-svelte": "^2.1.1"
+    "@playwright/experimental-ct-core": "1.41.0-next"
   },
   "devDependencies": {
-    "svelte": "^3.55.1"
+    "@sveltejs/vite-plugin-svelte": "^2.1.1",
+    "svelte": "^4.2.8"
+  },
+  "peerDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "svelte": "^3.0.0 || 4.0.0"
   },
   "bin": {
     "playwright": "cli.js"
