fix(fetch): allow empty fileName in fetch API

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -265,7 +265,7 @@ FormField:
     file:
       type: object?
       properties:
-        name: string
+        name: string?
         mimeType: string?
         buffer: binary
 
