--- a/packages/playwright-ct-solid/package.json
+++ b/packages/playwright-ct-solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-solid",
-  "version": "1.41.0-next",
+  "version": "1.41.0",
   "description": "Playwright Component Testing for Solid",
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     }
   },
   "dependencies": {
-    "@playwright/experimental-ct-core": "1.41.0-next",
+    "@playwright/experimental-ct-core": "1.41.0",
     "vite-plugin-solid": "^2.7.0"
   },
   "devDependencies": {
