--- a/packages/playwright-ct-vue/package.json
+++ b/packages/playwright-ct-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright/experimental-ct-vue",
-  "version": "1.41.0-next",
+  "version": "1.41.0",
   "description": "Playwright Component Testing for Vue",
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     }
   },
   "dependencies": {
-    "@playwright/experimental-ct-core": "1.41.0-next",
+    "@playwright/experimental-ct-core": "1.41.0",
     "@vitejs/plugin-vue": "^4.2.1"
   },
   "bin": {
