--- a/packages/playwright-ct-core/package.json
+++ b/packages/playwright-ct-core/package.json
@@ -21,7 +21,7 @@
     },
     "./cli": "./cli.js",
     "./lib/mount": "./lib/mount.js",
-    "./lib/vitePlugin": "./lib/vitePlugin.js",
+    "./plugin": "./plugin.js",
     "./types/component": {
       "types": "./types/component.d.ts"
     }
