chore: split cli processing into cli endpoint and program

--- a/packages/playwright-ct-core/package.json
+++ b/packages/playwright-ct-core/package.json
@@ -19,8 +19,8 @@
       "types": "./index.d.ts",
       "default": "./index.js"
     },
-    "./cli": "./cli.js",
     "./lib/mount": "./lib/mount.js",
+    "./lib/program": "./lib/program.js",
     "./plugin": "./plugin.js",
     "./types/component": {
       "types": "./types/component.d.ts"
