--- a/packages/playwright-ct-angular/package.json
+++ b/packages/playwright-ct-angular/package.json
@@ -29,20 +29,18 @@
     }
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "0.2.28",
-    "@angular-devkit/build-angular": "^16.1.0",
-    "@playwright/experimental-ct-core": "1.42.0-next",
-    "vite": "^4.4.9"
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@playwright/experimental-ct-core": "1.42.0-next"
   },
   "devDependencies": {
-    "@angular/animations": "^16.1.7",
-    "@angular/common": "^16.1.7",
-    "@angular/compiler": "^16.1.7",
-    "@angular/compiler-cli": "^16.1.7",
-    "@angular/core": "^16.1.7",
-    "@angular/platform-browser": "^16.1.7",
-    "@angular/platform-browser-dynamic": "^16.1.7",
-    "@angular/router": "^16.1.7",
+    "@angular/animations": "^17.0.0",
+    "@angular/common": "^17.0.0",
+    "@angular/compiler": "^17.0.0",
+    "@angular/compiler-cli": "^17.0.0",
+    "@angular/core": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "@angular/router": "^17.0.0",
     "@playwright/test": "1.38.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.0",
@@ -51,11 +49,11 @@
   },
   "peerDependencies": {
     "@playwright/test": ">=1.38.1",
-    "typescript": ">=4.9.3",
-    "@angular/common": ">=15.1.0 || >=16.0.0",
-    "@angular/platform-browser": ">=15.1.0 || >=16.0.0",
-    "@angular/router": ">=15.1.0 || >=16.0.0",
-    "@angular/core": ">=15.1.0 || >=16.0.0"
+    "typescript": ">=5.2.0",
+    "@angular/common": "^17.0.0",
+    "@angular/platform-browser": "^17.0.0",
+    "@angular/router": "^17.0.0",
+    "@angular/core": "^17.0.0"
   },
   "bin": {
     "playwright": "./cli.js"
