Adding MPT- reporter

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ttest": "node ./tests/playwright-test/stable-test-runner/node_modules/@playwright/test/cli test --config=tests/playwright-test/playwright.config.ts",
     "ct": "playwright test tests/components/test-all.spec.js --reporter=list",
     "test": "playwright test --config=tests/library/playwright.config.ts",
+    "test-v2": "playwright test tests/library/chromium/chromium.spec.ts --config=tests/library/playwright.config.ts",
     "eslint": "eslint --cache --report-unused-disable-directives --ext ts,tsx .",
     "tsc": "tsc -p .",
     "build-installer": "babel -s --extensions \".ts\" --out-dir packages/playwright-core/lib/utils/ packages/playwright-core/src/utils",
@@ -61,6 +62,7 @@
     "@babel/plugin-transform-optional-chaining": "^7.23.4",
     "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@microsoft/mpt-reporter": "^0.1.1-alpha-8019689078-1.0",
     "@types/babel__core": "^7.20.2",
     "@types/codemirror": "^5.60.7",
     "@types/formidable": "^2.0.4",
