--- a/packages/playwright-ct-angular/package.json
+++ b/packages/playwright-ct-angular/package.json
@@ -37,13 +37,14 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "rxjs": "~7.8.1",
     "typescript": "~5.2.0",
+    "vite": "~5.0.12",
     "zone.js": "~0.14.0"
   },
   "peerDependencies": {
-    "typescript": ">=5.2.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0"
+    "@angular/platform-browser-dynamic": "^17.0.0",
+    "typescript": ">=5.2.0"
   },
   "bin": {
     "playwright": "./cli.js"
