feat(playwright-core): add remove cookies api
This patch contains removeCookies method to remove cookies from BrowserContext by it's names

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1032,6 +1032,12 @@ BrowserContext:
 
     clearCookies:
 
+    removeCookies:
+      parameters:
+        cookieNames:
+          type: array
+          items: string
+
     clearPermissions:
 
     close:
@@ -3222,7 +3228,7 @@ ElectronApplication:
   events:
     close:
     console:
-      parameters: 
+      parameters:
         $mixin: ConsoleMessage
 
 Android:
