feat(playwright-core): add remove cookies api
Change removeCookies signature

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1034,9 +1034,12 @@ BrowserContext:
 
     removeCookies:
       parameters:
-        cookieNames:
-          type: array
-          items: string
+        cookies:
+          type: object
+          properties:
+            name: string?
+            domain: string?
+            path: string?
 
     clearPermissions:
 
