feat(playwright-core): add remove cookies api
Change removeCookies signature and logic

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1034,7 +1034,7 @@ BrowserContext:
 
     removeCookies:
       parameters:
-        cookies:
+        criteria:
           type: object
           properties:
             name: string?
