feat(playwright-core): add remove cookies api
Fix review comments

--- a/packages/protocol/src/protocol.yml
+++ b/packages/protocol/src/protocol.yml
@@ -1034,7 +1034,7 @@ BrowserContext:
 
     removeCookies:
       parameters:
-        criteria:
+        filter:
           type: object
           properties:
             name: string?
