feat(ct-angular): add pw-angular bin

--- a/packages/playwright-ct-angular/package.json
+++ b/packages/playwright-ct-angular/package.json
@@ -47,6 +47,7 @@
     "typescript": ">=5.2.0"
   },
   "bin": {
-    "playwright": "./cli.js"
+    "playwright": "cli.js",
+    "pw-angular": "cli.js"
   }
 }
