chore(ct-angular): remove useless pw-angular cli

--- a/packages/playwright-ct-angular/package.json
+++ b/packages/playwright-ct-angular/package.json
@@ -47,7 +47,6 @@
     "typescript": ">=5.2.0"
   },
   "bin": {
-    "playwright": "cli.js",
-    "pw-angular": "cli.js"
+    "playwright": "cli.js"
   }
 }
