--- a/packages/recorder/package.json
+++ b/packages/recorder/package.json
@@ -4,7 +4,13 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && tsc",
+    "build": "vite build && tsc && node ./utils/generate_injected.js",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "events": "^3.3.0"
+  },
+  "devDependencies": {
+    "@types/chrome": "^0.0.266"
   }
 }
