--- a/.github/workflows/publish_canary.yml
+++ b/.github/workflows/publish_canary.yml
@@ -19,8 +19,15 @@ jobs:
     permissions:
       contents: read
       id-token: write
+    environment: Release
     steps:
     - uses: actions/checkout@v4
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_PW_CDN_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_PW_CDN_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_PW_CDN_SUBSCRIPTION_ID }}
     - uses: actions/setup-node@v4
       with:
         node-version: 18
