--- a/.github/workflows/publish_canary.yml
+++ b/.github/workflows/publish_canary.yml
@@ -17,9 +17,9 @@ jobs:
     runs-on: ubuntu-20.04
     if: github.repository == 'microsoft/playwright'
     permissions:
-      contents: read
-      id-token: write
-    environment: Release
+      id-token: write  # This is required for OIDC login (azure/login) to succeed
+      contents: read   # This is required for actions/checkout to succeed
+    environment: allow-publish-driver-to-cdn # This is required for OIDC login (azure/login)
     steps:
     - uses: actions/checkout@v4
     - name: Azure Login
@@ -59,7 +59,6 @@ jobs:
     - name: build & publish driver
       env:
         AZ_UPLOAD_FOLDER: driver/next
-        AZ_ACCOUNT_NAME: ${{ secrets.AZ_ACCOUNT_NAME }}
       run: |
         utils/build/build-playwright-driver.sh
         utils/build/upload-playwright-driver.sh
