--- a/.github/workflows/publish_release_docker.yml
+++ b/.github/workflows/publish_release_docker.yml
@@ -22,7 +22,7 @@ jobs:
       id-token: write   # This is required for OIDC login (azure/login) to succeed
       contents: read    # This is required for actions/checkout to succeed
     if: github.repository == 'microsoft/playwright'
-    environment: Docker
+    environment: allow-publishing-docker-to-acr
     steps:
     - name: Azure Login
       uses: azure/login@v2
