--- a/.github/workflows/tests_primary.yml
+++ b/.github/workflows/tests_primary.yml
@@ -27,6 +27,7 @@ env:
 jobs:
   test_linux:
     name: ${{ matrix.os }} (${{ matrix.browser }} - Node.js ${{ matrix.node-version }})
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -78,6 +79,7 @@ jobs:
 
   test_linux_chromium_tot:
     name: ${{ matrix.os }} (chromium tip-of-tree)
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -122,6 +124,7 @@ jobs:
 
   test_test_runner:
     name: Test Runner
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -256,6 +259,7 @@ jobs:
 
   test_package_installations:
     name: "Installation Test ${{ matrix.os }}"
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
