--- a/.github/workflows/tests_secondary.yml
+++ b/.github/workflows/tests_secondary.yml
@@ -26,6 +26,7 @@ permissions:
 jobs:
   test_linux:
     name: ${{ matrix.os }} (${{ matrix.browser }})
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -66,6 +67,7 @@ jobs:
 
   test_mac:
     name: ${{ matrix.os }} (${{ matrix.browser }})
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -105,6 +107,7 @@ jobs:
 
   test_win:
     name: "Windows"
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -148,6 +151,7 @@ jobs:
 
   test-package-installations-other-node-versions:
     name: "Installation Test ${{ matrix.os }} (${{ matrix.node_version }})"
+    environment: allow-uploading-flakiness-results
     runs-on: ${{ matrix.os  }}
     strategy:
       fail-fast: false
@@ -187,6 +191,7 @@ jobs:
 
   headed_tests:
     name: "headed ${{ matrix.browser }} (${{ matrix.os }})"
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -229,6 +234,7 @@ jobs:
 
   transport_linux:
     name: "Transport"
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -269,6 +275,7 @@ jobs:
 
   tracing_linux:
     name: Tracing ${{ matrix.browser }} ${{ matrix.channel }}
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
@@ -315,6 +322,7 @@ jobs:
 
   chrome_stable_linux:
     name: "Chrome Stable (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "chrome-stable-linux"
@@ -350,6 +358,7 @@ jobs:
 
   chrome_stable_win:
     name: "Chrome Stable (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "chrome-stable-windows"
@@ -386,6 +395,7 @@ jobs:
 
   chrome_stable_mac:
     name: "Chrome Stable (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "chrome-stable-mac"
@@ -421,6 +431,7 @@ jobs:
 
   chromium_tot:
     name: Chromium TOT ${{ matrix.os }}
+    environment: allow-uploading-flakiness-results
     runs-on: ${{ matrix.os  }}
     env:
       PWTEST_CHANNEL: chromium-tip-of-tree
@@ -462,6 +473,7 @@ jobs:
 
   chromium_tot_headed:
     name: Chromium TOT headed ${{ matrix.os }}
+    environment: allow-uploading-flakiness-results
     runs-on: ${{ matrix.os  }}
     env:
       PWTEST_CHANNEL: chromium-tip-of-tree
@@ -503,6 +515,7 @@ jobs:
 
   firefox_beta_linux:
     name: "Firefox Beta (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "firefox-beta-linux"
@@ -538,6 +551,7 @@ jobs:
 
   firefox_beta_win:
     name: "Firefox Beta (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "firefox-beta-windows"
@@ -574,6 +588,7 @@ jobs:
 
   firefox_beta_mac:
     name: "Firefox Beta (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "firefox-beta-mac"
@@ -609,6 +624,7 @@ jobs:
 
   edge_stable_mac:
     name: "Edge Stable (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "edge-stable-mac"
@@ -644,6 +660,7 @@ jobs:
 
   edge_stable_win:
     name: "Edge Stable (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "edge-stable-windows"
@@ -680,6 +697,7 @@ jobs:
 
   edge_stable_linux:
     name: "Edge Stable (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "edge-stable-linux"
@@ -715,6 +733,7 @@ jobs:
 
   edge_beta_mac:
     name: "Edge Beta (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "edge-beta-mac"
@@ -750,6 +769,7 @@ jobs:
 
   edge_beta_win:
     name: "Edge Beta (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "edge-beta-windows"
@@ -786,6 +806,7 @@ jobs:
 
   edge_beta_linux:
     name: "Edge Beta (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "edge-beta-linux"
@@ -821,6 +842,7 @@ jobs:
 
   edge_dev_mac:
     name: "Edge Dev (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "edge-dev-mac"
@@ -856,6 +878,7 @@ jobs:
 
   edge_dev_win:
     name: "Edge Dev (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "edge-dev-windows"
@@ -892,6 +915,7 @@ jobs:
 
   edge_dev_linux:
     name: "Edge Dev (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "edge-dev-linux"
@@ -927,6 +951,7 @@ jobs:
 
   chrome_beta_linux:
     name: "Chrome Beta (Linux)"
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-20.04
     env:
       PWTEST_BOT_NAME: "chrome-beta-linux"
@@ -962,6 +987,7 @@ jobs:
 
   chrome_beta_win:
     name: "Chrome Beta (Win)"
+    environment: allow-uploading-flakiness-results
     runs-on: windows-latest
     env:
       PWTEST_BOT_NAME: "chrome-beta-windows"
@@ -998,6 +1024,7 @@ jobs:
 
   chrome_beta_mac:
     name: "Chrome Beta (Mac)"
+    environment: allow-uploading-flakiness-results
     runs-on: macos-latest
     env:
       PWTEST_BOT_NAME: "chrome-beta-mac"
@@ -1046,6 +1073,7 @@ jobs:
 
   test_linux_chromium_headless_new:
     name: Linux Chromium Headless New
+    environment: allow-uploading-flakiness-results
     runs-on: ubuntu-latest
     env:
       PWTEST_BOT_NAME: "headless-new"
