--- a/.github/workflows/tests_video.yml
+++ b/.github/workflows/tests_video.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   video_linux:
     name: "Video Linux"
+    environment: allow-uploading-flakiness-results
     strategy:
       fail-fast: false
       matrix:
